add: aiChat API & Logic

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,11 @@
 # Server URL
 NEXT_PUBLIC_SERVER_URL=http://localhost:3500
 
+# AI Agent URL
+NEXT_PUBLIC_AI_AGENT_URL=http://localhost:8000
+
 NEXT_PUBLIC_SUPABASE_URL=
 
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+NEXT_PUBLIC_VOICE_VOX_URL=http://localhost:50021
