--- a/ai-agent/pyproject.toml
+++ b/ai-agent/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.103.2"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 google-genai = "^0.6.0"
 python-dotenv = "^1.0.1"
+websockets = "^14.2"
 
 
 [build-system]
