--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@langchain/core": "^0.3.32",
+    "@langchain/google-genai": "^0.1.8",
     "@livekit/agents": "^0.6.2",
     "@prisma/client": "^6.1.0",
     "@supabase/supabase-js": "^2.47.10",
