update: 対話型AIエージェントとのChat機能を繋ぎ込み

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,4 +8,5 @@ NEXT_PUBLIC_SUPABASE_URL=
 
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
-NEXT_PUBLIC_VOICE_VOX_URL=http://localhost:50021
+# VoiceVox URL
+NEXT_PUBLIC_VOICE_VOX_URL=http://0.0.0.0:50021
