--- a/ai-agent/pyproject.toml
+++ b/ai-agent/pyproject.toml
@@ -12,6 +12,8 @@ uvicorn = {extras = ["standard"], version = "^0.23.2"}
 google-genai = "^0.6.0"
 python-dotenv = "^1.0.1"
 websockets = "^14.2"
+supabase = "^2.13.0"
+pydantic = {version = "^2.10.6", extras = ["email"] }
 
 
 [build-system]
