add: 求人検索の mock API を追加

--- a/ai-agent/.env.example
+++ b/ai-agent/.env.example
@@ -1,6 +1,13 @@
 
 GEMINI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
+# Supabase
+# FEと共通
 NEXT_PUBLIC_SUPABASE_URL=
 
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Google Custom Search API Key
+CUSTOM_SEARCH_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+CUSTOM_SEARCH_ENGINE_ID=xxxxxxxxxxxxxx
