--- a/ai-agent/pyproject.toml
+++ b/ai-agent/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.1"
 websockets = "^14.2"
 supabase = "^2.13.0"
 pydantic = {version = "^2.10.6", extras = ["email"] }
+google-api-python-client = "^2.160.0"
 
 
 [build-system]
