--- a/ai-agent/.env.example
+++ b/ai-agent/.env.example
@@ -1,13 +1,9 @@
 
 GEMINI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# Supabase
 # FEと共通
 NEXT_PUBLIC_SUPABASE_URL=
 
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
-# Google Custom Search API Key
-CUSTOM_SEARCH_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-CUSTOM_SEARCH_ENGINE_ID=xxxxxxxxxxxxxx
+VERTEXAI_PROJECT_ID=
