--- a/ai-agent/.env.example
+++ b/ai-agent/.env.example
@@ -2,8 +2,8 @@
 GEMINI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # FEと共通
-NEXT_PUBLIC_SUPABASE_URL=
+SUPABASE_URL=
 
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_ANON_KEY=
 
 VERTEXAI_PROJECT_ID=
